--- a/app/src/main/res/layout/fragment_club_manager.xml
+++ b/app/src/main/res/layout/fragment_club_manager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.loginFragments.ClubManagerFragment" >
+    tools:context=".ui.login.login.loginFragments.ClubManagerFragment" >
 
     <TextView
         android:id="@+id/textView2223"
