--- a/app/src/main/res/layout/fragment_login_main_page.xml
+++ b/app/src/main/res/layout/fragment_login_main_page.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomePageActivity">
+    tools:context=".ui.login.login.loginFragments.LoginMainPageFragment">
+
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
