--- a/app/src/main/res/layout/activity_sks_admin_home_page.xml
+++ b/app/src/main/res/layout/activity_sks_admin_home_page.xml
@@ -20,13 +20,16 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/sks_admin_bottom_nav_fragment_container_view"
-        android:name="com.tahayasindogukan.studentclubapplication.ui.home.sksAdmin.SksAdminHomePageFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/sks_admin_bottom_bar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:navGraph="@navigation/sks_admin_bottom_navigation_graph" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
